# timectl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
src/: main.py
src/commands/: __init__.py  config_commands.py  project_commands.py
tests/config_feature/: test_config_commands.py
tests/project_feature/: test_project_commands.py
